Version 3   2013-March-8

--Fixed bug in game playback that could not handle extra recording argument 
  (change highlights on/off flag).

--Fixed a server-side bug that was causing house pings to fail when a user was
  editing their house after robbing a house, and the robbed house was
  simultaneously being edited by that house's owner (thanks Jeremiah Reid, who 
  was spuriously timed out of his house 20 times). 

--Fixed SQL query bug when searching house tables in web admin UI.

--Dealt with houses-to-rob scarcity issue by keeping houses robbable after they
  are successfully robbed the first time, as their money dwindles.  Before, a
  house could only be robbed once before going back on the must-edit-again
  queue. 

--Fixed server bug that caused paintings to disappear from circulation when 
  family members killed but vault not reached.

--Server prevents a dual-client setup from keeping robber's own house checked 
  out for edit during robbery and other non-edit actions.

--Fixed bug that allowed walking over electrified floors post-robbery.

--Fixed suicide button misbehavior when self-test forced post-robbery.

--'Leave <-' message now pops in instantly if gallery is empty.

--Backpack now resets properly when Restart button hit in robbery replay.

--Added Faster button for robbery replays.

--Server now saves your changed gallery ordering even if you haven't modified
  your house otherwise (thanks Jeremiah Reid).

--Ending a security tape now takes you back to security tape menu instead of 
  main menu (thanks Jeremiah Reid).

--Changed wording to 'View YOUR security tapes' to avoid confusion (some people
  pick a house from the to-rob list and try to click that tape button).

--Better wording of family exit warning (Family needs empty path to exit).

--Better wording on house self-test page (reach your own vault).

--Fixed long painting buy button tool tips that hung off edge of screen.

--Fixed door/window orientation bug in north/south hallways.
